src/es/components/organisms/header/default-/default-.css
:host {
  --header-default-a-color-hover: var(--header-default-a-color-hover-custom, var(--color-secondary));
  --header-default-a-color: var(--header-default-a-color-custom, var(--color));
  --header-default-a-font-size: var(--h4-font-size);
  --header-default-a-line-height: 2rem;
  --header-default-a-margin-mobile: 0 5% 0 0;
  --header-default-a-margin: 0 max(4.5625rem, 3vw) 0 0;
  --header-default-a-menu-icon-align-self-mobile: baseline;
  --header-default-a-menu-icon-background-color: var(--header-default-a-menu-icon-background-color-custom, var(--background-color));
  --header-default-a-menu-icon-border-radius: var(--header-default-a-menu-icon-border-radius-custom, 25%);
  --header-default-a-menu-icon-height-open-mobile: var(--header-default-a-menu-icon-height);
  --header-default-a-menu-icon-height: 3px;
  --header-default-a-menu-icon-margin: 0;
  --header-default-a-menu-icon-one-transform: rotate(-45deg) translateY(0.87em);
  --header-default-a-menu-icon-padding-open: var(--header-default-a-menu-icon-padding);
  --header-default-a-menu-icon-padding: 1.7rem var(--content-spacing-mobile, var(--content-spacing)) 1.2rem;
  --header-default-a-menu-icon-spacing: 6px;
  --header-default-a-menu-icon-two-transform: rotate(45deg) translateY(-0.87em);
  --header-default-a-menu-icon-width-open-mobile: var(--header-default-a-menu-icon-width);
  --header-default-a-menu-icon-width: 28px;
  --header-default-a-padding-mobile: 1.5rem 0 1.4rem 0;
  --header-default-a-padding: 0 0 1.5rem 0;
  --header-default-a-text-decoration-hover: none;
  --header-default-a-text-decoration: none;
  --header-default-a-text-transform: none;
  --header-default-a-white-space: nowrap;
  --header-default-align-items: var(--header-default-align-items-custom end);
  --header-default-background-color: var(--header-default-background-color-custom, var(--color-secondary));
  --header-default-border-bottom: var(--header-default-border-bottom-custom, none);
  --header-default-box-sizing-open-mobile: border-box;
  --header-default-content-width-mobile: 100%;
  --header-default-flex-wrap: var(--header-default-flex-wrap-custom, wrap);
  --header-default-height-mobile: var(--header-default-height-mobile-custom, 5rem);
  --header-default-height: var(--header-default-height-custom, auto);
  --header-default-justify-content-mobile: space-between;
  --header-default-justify-content: var(--header-default-justify-content-custom, center);
  --header-default-left-open-mobile: 0;
  --header-default-logo-width: var(--header-default-logo-width-custom, 90px);
  --header-default-m-navigation-background-color-mobile: var(--background-color);
  --header-default-m-navigation-height-mobile: calc(100vh - var(--header-default-m-navigation-top-mobile));
  --header-default-m-navigation-height-open-mobile: var(--header-default-m-navigation-height-mobile);
  /* 116px = height of header and height of login, since it will probably change, i leave it as fixed variable and add as variable later in new header component*/
  --m-multi-level-navigation-height-open-mobile: calc(100svh - 116px);
  --header-default-m-navigation-top-mobile: var(--header-default-height-mobile);
  --header-default-m-navigation-transition: none;
  --header-default-m-multi-level-navigation-background-color-mobile: var(--background-color);
  --header-default-margin-mobile: var(--header-default-margin-mobile-custom, var(--content-spacing-mobile) auto);
  --header-default-margin: var(--header-default-margin-custom, var(--content-spacing) auto);
  --header-default-order: 0;
  --header-default-position-open-mobile: fixed;
  --header-default-position: static;
  --header-default-sticky-border-bottom: var(--header-default-sticky-border-bottom-custom, 1px solid var(--m-gray-300));
  --header-default-top-open-mobile: auto;
  --header-default-width-open-mobile: 100%;
  --logo-default-height-mobile: var(--logo-default-height-mobile-custom, var(--logo-default-height));
  --logo-default-height: auto;
  --logo-default-width-mobile: var(--logo-default-width-mobile-custom, var(--logo-default-width));
  --logo-default-width: var(--header-default-logo-width);
}

